--- a/ch09-03-to-panic-or-not-to-panic.html
+++ b/ch09-03-to-panic-or-not-to-panic.html
@@ -171,7 +171,7 @@
 <p>所以你該如何決定何時要呼叫 panic! 還是要回傳 Result 呢？當程式碼恐慌時，就沒有任何回復的方式。你可以在任何錯誤場合呼叫 <code>panic!</code>，無論是可能或不可能復原的情況。不過這樣你就等於替呼叫你的程式碼的呼叫者做出決定，讓情況變成無法復原的錯誤了。當你選擇回傳 <code>Result</code> 數值，你將決定權交給呼叫者的程式碼。呼叫者可能會選擇符合當下場合的方式嘗試復原錯誤，或者它可以選擇 Err 內的數值是不可回復的，所以它就呼叫 panic! 讓你原本可回復的錯誤轉成不可回復。因此，當你定義可能失敗的函式時預設回傳 Result 是不錯的選擇。</p>
 <p>在少數情況下，程式碼恐慌會比回傳 Result 來得恰當。讓我們來探討為何在範例、程式碼原型與測試選擇恐慌會比較好。然後我們將討論到一種編譯器無法辨別出不可能失敗，但人類的你卻可以的情況。本章節會總結一些通用指導原則來決定何時在函式庫程式碼中恐慌。</p>
 <h3><a class="header" href="#範例程式碼原型與測試" id="範例程式碼原型與測試">範例、程式碼原型與測試</a></h3>
-<p>當你在寫解釋一些概念的範例時，寫出完善錯誤處理的範例，反而會讓範例變得較不清楚。在範例中，，使用像是 unwrap 這樣會恐慌的方法可以被視為是一種要求使用者自行決定如何處理錯誤的表現，因為他們可以依據程式碼執行的方式來修改此方法。</p>
+<p>當你在寫解釋一些概念的範例時，寫出完善錯誤處理的範例，反而會讓範例變得較不清楚。在範例中，使用像是 unwrap 這樣會恐慌的方法可以被視為是一種要求使用者自行決定如何處理錯誤的表現，因為他們可以依據程式碼執行的方式來修改此方法。</p>
 <p>同樣地 unwrap 與 expect 方法也很適用在試做原型，你可以在決定準備開始處理錯誤前使用它們。它們會留下清楚的痕跡，當你準備好要讓程式碼更穩固時，你就能回來修改。</p>
 <p>如果有方法在測試內失敗時，你會希望整個測試都失敗，就算該方法不是要測試的功能。因為 panic! 會將測試標記為失敗，所以在此呼叫 unwrap 或 expect 是很正確的。</p>
 <h3><a class="header" href="#當你知道的比編譯器還多的時候" id="當你知道的比編譯器還多的時候">當你知道的比編譯器還多的時候</a></h3>
@@ -190,12 +190,12 @@
 <li>你的程式在此時需要避免這種嚴重狀態。</li>
 <li>你所使用的型別沒有適合的方式能夠處理此嚴重狀態。</li>
 </ul>
-<p>如果有人呼叫了你的程式碼卻傳遞了不合理的數值，最好的辦法是呼叫 <code>panic!</code> 並警告使用你函式庫的人他們程式碼錯誤發生地位置，好讓他們在開發時就能修正。同樣地，<code>panic!</code> 也適合用於如果你呼叫了你無法掌控的外部程式碼，然後它回傳了你無法修正的無效狀態。</p>
+<p>如果有人呼叫了你的程式碼卻傳遞了不合理的數值，最好的辦法是呼叫 <code>panic!</code> 並警告使用函式庫的人他們程式碼錯誤發生的位置，好讓他們在開發時就能修正。同樣地，<code>panic!</code> 也適合用於如果你呼叫了你無法掌控的外部程式碼，然後它回傳了你無法修正的無效狀態。</p>
 <p>不過如果失敗是可預期的，回傳 <code>Result</code> 就會比呼叫 <code>panic!</code> 來得好。類似的例子有，語法分析器 （parser）收到格式錯誤的資訊，或是 HTTP 請求回傳了一個狀態，告訴你已經達到請求上限了。在這樣的案例，回傳 <code>Result</code> 代表失敗是預期有時會發生的，而且呼叫者必須決定如何處理。</p>
 <p>當你的程式碼針對數值進行運算時，你的程式需要先驗證該數值，如果數值無效的話就要恐慌。這是基於安全原則，嘗試對無效資料做運算的話可能會導致你的程式碼產生漏洞。這也是標準函式庫在你嘗試取得超出界限的記憶體存取會呼叫 <code>panic!</code> 的主要原因。嘗試取得不屬於當前資料結構的記憶體是常見的安全問題。函式通常都會訂下一些<em>合約（contracts）</em>，它們的行爲只有在輸入資料符合特定要求時才帶有保障。當違反合約時恐慌是十分合理的，因爲違反合約就代表這是呼叫者的錯誤，這不是你的程式碼該主動處理的錯誤。事實上，呼叫者也沒有任何合理的理由來復原這樣的錯誤。函式的合約應該要寫在函式的技術文件中解釋，尤其是違反時會恐慌的情況。</p>
-<p>然而要在你的函式寫一大堆錯誤檢查有時是很冗長且麻煩的。幸運的是你可以利用 Rust 的型別系統（以及編譯器的型別檢查）來幫你完成檢驗。如果你的函式用特定型別作物喔爲參數的話，你就可以認定你的程式邏輯是編輯器已經幫你確保你拿到的數值是有效的。舉例來說，如果你有個一型別而非 <code>Option</code> 的話，你的程式就會預期取得<em>某個值</em>而不是<em>沒拿到值</em>。你的程式就不必處理 <code>Some</code> 和 <code>None</code> 這兩個變體情形，它只會有一種情況並絕對會拿到數值。要是有人沒有傳遞任何值給你的函式會根本無法編譯，所以你的函式就不需要在執行時做檢查。另一個例子是使用非帶號整數像是 <code>u32</code> 來確保參數不會是負數。</p>
+<p>然而要在你的函式寫一大堆錯誤檢查有時是很冗長且麻煩的。幸運的是你可以利用 Rust 的型別系統（以及編譯器的型別檢查）來幫你完成檢驗。如果你的函式用特定型別作爲參數的話，你就可以認定你的程式邏輯是編輯器已經幫你確保你拿到的數值是有效的。舉例來說，如果你有個一型別而非 <code>Option</code> 的話，你的程式就會預期取得<em>某個值</em>而不是<em>沒拿到值</em>。你的程式就不必處理 <code>Some</code> 和 <code>None</code> 這兩個變體情形，它只會有一種情況並絕對會拿到數值。要是有人沒有傳遞任何值給你的函式會根本無法編譯，所以你的函式就不需要在執行時做檢查。另一個例子是使用非帶號整數像是 <code>u32</code> 來確保參數不會是負數。</p>
 <h3><a class="header" href="#建立自訂型別來驗證" id="建立自訂型別來驗證">建立自訂型別來驗證</a></h3>
-<p>讓我們來試著使用 Rust 的型別系統來進一步確保我們擁有有效數值，並建立自訂型別來驗證。回想一下第二章的猜謎遊戲，我們的程式碼要使用者從 1 到 100 之間猜一個數字。在開始與祕密數字做比較之前，我們從未驗證使用者輸入的值，我們只驗證了它是否爲正的。在這種情況帶來的後果還不算嚴重：我們還是會顯示「Too high」或「Too low」。但是我們可以改善這段來引導使用者輸入有效數值，並在使用者輸入時猜了超出範圍的數字或字母時呈現不同行爲。</p>
+<p>讓我們來試著使用 Rust 的型別系統來進一步確保我們擁有有效數值，並建立自訂型別來驗證。回想一下第二章的猜謎遊戲，我們的程式碼要使用者從 1 到 100 之間猜一個數字。在開始與祕密數字做比較之前，我們從未驗證使用者輸入的值，我們只驗證了它是否爲正的。在這種情況帶來的後果還不算嚴重：我們還是會顯示「太大」或「太小」。但是我們可以改善這段來引導使用者輸入有效數值，並在使用者輸入時猜了超出範圍的數字或字母時呈現不同行爲。</p>
 <p>我們可以將輸入的猜測分析改成 <code>i32</code> 而非 <code>u32</code> 來允許負數，並檢查數字是否在範圍內，如以下所示：</p>
 <pre><code class="language-rust ignore"><span class="boring">use rand::Rng;
 </span><span class="boring">use std::cmp::Ordering;
@@ -223,7 +223,7 @@
         };
 
         if guess &lt; 1 || guess &gt; 100 {
-            println!(&quot;The secret number will be between 1 and 100.&quot;);
+            println!(&quot;祕密數字介於 1 到 100 之間。&quot;);
             continue;
         }
 
@@ -241,7 +241,7 @@
 </span></code></pre>
 <p><code>if</code> 表達式檢查我們的數值是否超出範圍，如果是的話就告訴使用者問題原因，並呼叫 <code>continue</code> 來進行下一次的猜測循環，要求再猜一次。在 <code>if</code> 表達式之後我們就能用已經知道範圍是在 1 到 100 的 <code>guess</code> 與祕密數字做比較。</p>
 <p>不過這並非理想解決方案：如果程式必定要求數值一定要是 1 到 100，而且我們有很多函式都有此需求的話，在每個函式都檢查就太囉唆了（而且可能會影響效能）。</p>
-<p>對此我們可以建立一個新的型別，並且建立一個驗證產生實例的函式，這樣我們就不必在每個地方都做驗證。這樣一來函式就可以安全地以這個新型別作爲簽名，並放心地使用收到的數值。範例 9-10 顯示了定義 <code>Guess</code> 型別的例子，它的 <code>new</code> 函式只會在接收值爲 1 到 100 時纔會建立 <code>Guess</code> 實例。</p>
+<p>對此我們可以建立一個新的型別，並且建立一個驗證產生實例的函式，這樣我們就不必在每個地方都做驗證。這樣一來函式就可以安全地以這個新型別作爲簽名，並放心地使用收到的數值。範例 9-10 顯示了定義 <code>Guess</code> 型別的例子，它的 <code>new</code> 函式只會在接收值爲 1 到 100 時才會建立 <code>Guess</code> 實例。</p>
 <!-- Deliberately not using rustdoc_include here; the `main` function in the
 file requires the `rand` crate. We do want to include it for reader
 experimentation purposes, but don't want to include it for rustdoc testing
@@ -256,7 +256,7 @@ purposes. -->
 impl Guess {
     pub fn new(value: i32) -&gt; Guess {
         if value &lt; 1 || value &gt; 100 {
-            panic!(&quot;Guess value must be between 1 and 100, got {}.&quot;, value);
+            panic!(&quot;猜測數字必須介於 1 到 100 之間，你輸入的是 {}。&quot;, value);
         }
 
         Guess { value }
