--- a/ch12-03-improving-error-handling-and-modularity.html
+++ b/ch12-03-improving-error-handling-and-modularity.html
@@ -220,7 +220,7 @@ fn parse_config(args: &amp;[String]) -&gt; (&amp;str, &amp;str) {
 </code></pre>
 <p><span class="caption">範例 12-5：從 <code>main</code> 提取 <code>parse_config</code> 函式</span></p>
 <p>我們仍然收集命令列引數至向量中，但不同於在 <code>main</code> 函式中將索引 1 的引數數值賦值給變數 <code>query</code> 且將索引 2 的引數數值賦值給變數 <code>filename</code>，我們將整個向量傳至 <code>parse_config</code> 函式。<code>parse_config</code> 函式會擁有決定哪些引數要賦值給哪些變數的邏輯，並將數值回傳給 <code>main</code>。我們仍然在 <code>main</code> 中建立變數 <code>query</code> and <code>filename</code>，但 <code>main</code> 不再負責決定命令列引數與變數之間的關係。</p>
-<p>此重構可能對我們的小程式來說有點像是殺雞焉用牛刀，但是我們正一小步一小步地累積重構。走了這項改變後，請再次執行程式來驗證引數解析有沒有正常運作。經常檢查你的進展是很好的，這能幫助你找出問題發生地原因。</p>
+<p>此重構可能對我們的小程式來說有點像是殺雞焉用牛刀，但是我們正一小步一小步地累積重構。走了這項改變後，請再次執行程式來驗證引數解析有沒有正常運作。經常檢查你的進展是很好的，這能幫助你找出問題發生的原因。</p>
 <h4><a class="header" href="#集結配置數值" id="集結配置數值">集結配置數值</a></h4>
 <p>我們可以在進一步改善 <code>parse_config</code> 函式。目前我們回傳的是元組，但是我們馬上又將元組拆成獨立部分。這是個我們還沒有建立正確抽象的信號。</p>
 <p>另外一個告訴我們還有改善空鍵的地方是 <code>parse_config</code> 名稱中的 <code>config</code>，這指示我們回傳的兩個數值是相關的，且都是配置數值的一部分。我們現在沒有確實表達出這樣的資料結構，而只有將兩個數值組合成一個元組而已，我們可以將這兩個數值存入一個結構體，並對每個結構體欄位給予有意義的名稱。這樣做能讓未來的維護者可以清楚知道這些數值的不同與關聯，以及它們的用途。</p>
